<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="30dp"
    android:background="@drawable/border"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_name"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/seegson_green"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/border"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_attributes"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/character_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attributes_strength"
                android:textSize="26sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/border"
            android:layout_marginBottom="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_abilities"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/character_abilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abilities_str_heavy_machinery"
                android:textSize="26sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/border"
            android:padding="15dp">
            <Button
                android:id="@+id/deleteCharacterBtn"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:text="X"
                android:theme="@style/Theme.AlienRPG"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>