<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCharacterActivity"
    android:background="@color/terminal_green">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="54dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/attributes_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="230dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_character_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/top_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/characterNameView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/character_name"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/characterNameField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/character_name_hint"
        android:inputType="textPersonName"
        android:textColorHint="@color/acid_blood"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toEndOf="@+id/characterNameView"
        app:layout_constraintTop_toTopOf="@+id/top_guide" />

    <TextView
        android:id="@+id/characterCareerView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/character_career"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterNameView" />


    <Spinner
        android:id="@+id/career_selector"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:entries="@array/careers_array"
        app:layout_constraintEnd_toStartOf="@id/right_guide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/characterCareerView"
        app:layout_constraintTop_toBottomOf="@+id/characterNameField"
        android:popupBackground="@color/seegson_green"
        android:backgroundTint="@color/seegson_green"/>

    <LinearLayout
        android:id="@+id/attribute_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/attributes_guide"
        app:layout_constraintStart_toEndOf="@id/left_guide"
        app:layout_constraintEnd_toStartOf="@id/right_guide"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
        android:background="@drawable/border"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_attributes"
            app:layout_constraintBottom_toTopOf="@+id/attributes_guide"
            app:layout_constraintStart_toStartOf="@+id/left_guide"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_available_points"
                app:layout_constraintBottom_toTopOf="@+id/attributes_guide"
                app:layout_constraintStart_toStartOf="@+id/left_guide" />

            <TextView
                android:id="@+id/attributePointPool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/attributes_default_value"
                android:textColor="@color/acid_blood" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attribute_strength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attribute_strength_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sevastopol_interface"
                android:text="@string/attributes_strength"/>

            <TextView
                android:id="@+id/attribute_strength_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/attributes_default_value"
                android:textAlignment="center"
                android:textColor="@color/seegson_green" />

            <Button
                android:id="@+id/attribute_strength_subtract"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/general_button_subtract"
                android:theme="@style/Theme.AlienRPG"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/attribute_strength_add"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/general_button_add"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attribute_agility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attribute_agility_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sevastopol_interface"
                android:text="@string/attributes_agility"/>

            <TextView
                android:id="@+id/attribute_agility_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/attributes_default_value"
                android:textAlignment="center"
                android:textColor="@color/seegson_green"/>

            <Button
                android:id="@+id/attribute_agility_subtract"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/general_button_subtract"
                android:theme="@style/Theme.AlienRPG" />

            <Button
                android:id="@+id/attribute_agility_add"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/general_button_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attribute_wits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attribute_wits_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sevastopol_interface"
                android:text="@string/attributes_wits"/>

            <TextView
                android:id="@+id/attribute_wits_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/attributes_default_value"
                android:textAlignment="center"
                android:textColor="@color/seegson_green"/>

            <Button
                android:id="@+id/attribute_wits_subtract"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/general_button_subtract"
                android:theme="@style/Theme.AlienRPG" />

            <Button
                android:id="@+id/attribute_wits_add"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/general_button_add"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/attribute_empathy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attribute_empathy_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sevastopol_interface"
                android:text="@string/attributes_empathy"/>

            <TextView
                android:id="@+id/attribute_empathy_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/attributes_default_value"
                android:textAlignment="center"
                android:textColor="@color/seegson_green"/>

            <Button
                android:id="@+id/attribute_empathy_subtract"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/general_button_subtract"
                android:theme="@style/Theme.AlienRPG" />

            <Button
                android:id="@+id/attribute_empathy_add"
                style="@style/buttonStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/general_button_add"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>